--- a/_posts/0000-01-02-Gligor-K.md
+++ b/_posts/0000-01-02-Gligor-K.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our Gligor-K's slide!"
 ---
 This is Gligor-K's slide
 Use the left arrow to go back!
